# j4rs

./: .gitignore  .travis.yml  LICENSE-MIT  README.md  appveyor.yml  run_tests.sh
.github/workflows/: ci-workflow.yml
charity/: README_CHARITY.md
documentation/: advanced_j4rs.md
java/: pom.xml
java-fx/: pom.xml
java-fx/src/main/java/org/astonbitecode/j4rs/api/invocation/: JavaFxInstanceGeneratorDelegate.java  JavaFxInvocation.java
java-fx/src/main/java/org/astonbitecode/j4rs/api/jfx/: J4rsFxmlLoader.java
java-fx/src/main/resources/: MANIFEST.MF
java-fx/src/test/java/org/astonbitecode/j4rs/api/invocation/: JavaFxInstanceGeneratorDelegateTest.java
java/src/main/java/org/astonbitecode/j4rs/api/: Instance.java  InstanceBase.java  JsonValue.java  NativeInstantiation.java  NativeInvocation.java  NativeInvocationBase.java  ObjectValue.java
java/src/main/java/org/astonbitecode/j4rs/api/async/: J4rsAsyncContext.java  J4rsPolledFuture.java
java/src/main/java/org/astonbitecode/j4rs/api/deploy/: DeployUtils.java  FileSystemDeployer.java  J4rsClassLoader.java  MavenDeployer.java  MavenDeployerApi.java  SimpleMavenDeployer.java
java/src/main/java/org/astonbitecode/j4rs/api/dtos/: GeneratedArg.java  InvocationArg.java  InvocationArgGenerator.java
java/src/main/java/org/astonbitecode/j4rs/api/instantiation/: NativeInstantiationImpl.java
java/src/main/java/org/astonbitecode/j4rs/api/invocation/: EagerJsonInvocationImpl.java  InstanceGenerator.java  JavaFxInvocation.java  JsonInvocationImpl.java  NativeCallbackSupport.java  NativeCallbackToRustChannelSupport.java  NativeCallbackToRustFutureSupport.java
java/src/main/java/org/astonbitecode/j4rs/api/java2rust/: Java2RustUtils.java
java/src/main/java/org/astonbitecode/j4rs/api/jfx/: FxApplication.java  FxApplicationStartCallback.java  J4rsFxmlLoader.java
java/src/main/java/org/astonbitecode/j4rs/api/value/: JsonValueFactory.java  JsonValueImpl.java  NullJsonValueImpl.java  NullObject.java
java/src/main/java/org/astonbitecode/j4rs/errors/: InstantiationException.java  InvalidArgumentException.java  InvocationException.java  JsonCodecException.java
java/src/main/java/org/astonbitecode/j4rs/json/: Codec.java  JacksonCodec.java  JsonCodecService.java
java/src/main/java/org/astonbitecode/j4rs/rust/: FunctionPointer.java  RustPointer.java
java/src/main/java/org/astonbitecode/j4rs/tests/: DummyMapImpl.java  DummyMapInterface.java  MyBean.java  MySecondTest.java  MyTest.java
java/src/main/java/org/astonbitecode/j4rs/utils/: Defs.java  Utils.java
java/src/test/java/org/astonbitecode/j4rs/api/deploy/: DeployUtilsTest.java  FileSystemDeployerTest.java  MavenDeployerTest.java  (+1 more)
java/src/test/java/org/astonbitecode/j4rs/json/: CodecTest.java  JacksonCodecTest.java
java/src/test/java/org/astonbitecode/j4rs/tests/: MyTestTest.java
java/src/test/java/org/astonbitecode/j4rs/utils/: ChildDummy.java  ChildOfDummyWithFields.java  ClassWithDummyAtConstructor.java  Dummy.java  DummyInterface.java  DummyInterfaceFather.java  DummyInterfaceMother.java  DummyMapImpl.java  DummyMapInterface.java  DummyWithFields.java  DummyWithStatic.java  FailingDummy.java  GrandchildDummy.java  OtherDummy.java
java/src/test/java/org/astonbitecode/j4rs/value/: JsonValueImplTest.java
java/src/test/resources/: logback-test.xml
rust/: Cargo.toml  Cross.toml  README.md  build.rs
rust/benches/: j4rs_benchmark.rs
rust/j4rs_derive/: Cargo.toml  README.md
rust/j4rs_derive/src/: lib.rs
rust/src/: api.rs  cache.rs  errors.rs  jfx.rs  jni_utils.rs  lib.rs  logger.rs  prelude.rs  provisioning.rs  utils.rs
rust/src/api/: instance.rs  invocation_arg.rs  mod.rs
rust/src/api_tweaks/: android.rs  generic.rs  macos.rs  mod.rs  no_runtime_lib_loading.rs
rust/src/async_api/: mod.rs
test-resources/java/: pom.xml
(+19 files in other folders)
