[package]
name = "j4rs"
version = "0.7.1"
authors = ["aston <astonbitecode@gmail.com>"]
description = "j4rs stands for 'Java for Rust' and allows effortless calls to Java code, from Rust"
keywords = ["java", "jni"]
license = "MIT/Apache-2.0"
repository = "https://github.com/astonbitecode/j4rs"
readme = "README.md" 
categories = ["api-bindings"]
build = "build.rs"
edition = "2018"

[badges]
travis-ci = { repository = "astonbitecode/j4rs", branch = "master" }

[lib]
name = "j4rs"
crate-type = ["rlib", "cdylib"]
path = "src/lib.rs"

[dependencies]
log = "0.4"
libc = "0.2"
jni-sys = "0.3"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
lazy_static = "1.3"
java-locator = "0.1"
fs_extra = "1.1"
libloading = "0.5"

[build-dependencies]
fs_extra = "1.1"
dirs = "2.0"
java-locator = "0.1"
