[package]
name = "j4rs"
version = "0.14.0"
authors = ["aston <astonbitecode@gmail.com>"]
description = "j4rs stands for 'Java for Rust' and allows effortless calls to Java code, from Rust"
keywords = ["java", "jni"]
license = "MIT/Apache-2.0"
repository = "https://github.com/astonbitecode/j4rs"
readme = "README.md"
categories = ["api-bindings"]
build = "build.rs"
edition = "2018"

[badges]
travis-ci = { repository = "astonbitecode/j4rs", branch = "master" }

[lib]
name = "j4rs"
crate-type = ["rlib", "cdylib"]
path = "src/lib.rs"

[dependencies]
log = "0.4"
libc = "0.2"
jni-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4"
java-locator = "0.1"
fs_extra = "1.2"
libloading = "0.7"
cesu8 = "1.1.0"

[build-dependencies]
fs_extra = "1.2"
dirs = "4.0"
java-locator = "0.1"
sha2 = "0.10"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "j4rs_benchmark"
harness = false