[package]
name = "j4rs"
version = "0.16.1"
authors = ["aston <astonbitecode@gmail.com>"]
description = "j4rs stands for 'Java for Rust' and allows effortless calls to Java code, from Rust"
keywords = ["java", "jni"]
license = "MIT/Apache-2.0"
repository = "https://github.com/astonbitecode/j4rs"
readme = "README.md"
categories = ["api-bindings"]
build = "build.rs"
edition = "2021"

[badges]
travis-ci = { repository = "astonbitecode/j4rs", branch = "master" }

[lib]
name = "j4rs"
crate-type = ["rlib", "cdylib"]
path = "src/lib.rs"

[dependencies]
log = "0.4"
libc = "0.2"
jni-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4"
java-locator = { version = "0.1", optional = true }
fs_extra = "1.3"
libloading = { version = "0.8", optional = true }
cesu8 = "1.1.0"
dunce = "1.0"
futures = "0.3"

[build-dependencies]
fs_extra = "1.3"
dirs = "5.0"
glob = "0.3"
java-locator = "0.1"
sha2 = "0.10"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tokio = { version = "1.28", features = ["full"] }
async-std = {version = "1.12", features = ["attributes"]}

[features]
default = ["dep:libloading", "dep:java-locator"]
# Use a predefined linker setup to load the jvm dynamic library instead of libloading
no-runtime-libloading = []

[[bench]]
name = "j4rs_benchmark"
harness = false