[package]
name = "j4rs_derive"
version = "0.1.1"
authors = ["aston <astonbitecode@gmail.com>"]
description = "The proc macro crate for `j4rs` that allows jni calls to Rust libraries."
keywords = ["java", "jni"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/astonbitecode/j4rs"
readme = "README.md"
categories = ["api-bindings"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
syn = { version = "1.0", features = ["full"] }
quote = "1.0"